--- a/assets/css/hover.css
+++ b/assets/css/hover.css
@@ -2157,7 +2157,7 @@
   left: 0;
   right: 100%;
   bottom: 0;
-  background: #2098D1;
+  background: #033a47;
   height: 4px;
   -webkit-transition-property: right;
   transition-property: right;
