--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -337,6 +337,94 @@ figure.effect-sadie3:hover p {
     
 }
 
+.gift-box {
+    text-align: center;
+}
+
+.gift-box h1{
+    font-size: 80px;
+    margin-left: 10px;
+    margin-top: 30px;
+}
+
+.gift-box h3 {
+    font-size: 30px;
+    margin-left: 30px;
+}
+
+.gift-box p{
+    text-align: right;
+    margin-right: 30px;
+    font-size: 50px;
+}
+
+.gift-box a:hover {
+    text-decoration: none;
+    
+}
+
+.menu-link {
+    width: 500px;
+    background-color: black;
+    font-size: 50px;
+    padding: 20px;
+    border-radius: 30px;
+    border: 3px solid #0bbee9;
+    color: #0bbee9;
+}
+
+
+.menu-link:hover {
+    background-color: #0bbee9;
+    border: 3px solid #0bbee9;
+    color: black;
+    text-decoration: none;
+    transition: 0.3s ease;
+}
+
+
+.price {
+    font-size: 30px;
+    background-color:#0bbee9;
+    color:black;
+    padding-left:20px;
+    padding-right:20px;
+    padding-top:10px;
+    padding-bottom:10px;
+    border-radius:10px;
+}
+
+
+
+@media(max-width: 992px){
+    .menu-link{
+        font-size: 50px;
+    }
+}
+
+@media(max-width:1154px){
+    .gift-box h1{
+        font-size: 60px;
+    }
+}
+@media(max-width:882px){
+    .gift-box h1{
+        font-size: 50px;
+    }
+}
+
+@media(max-width: 767px){
+
+    .gift-box h1{
+        font-size: 70px;
+    }
+    
+    .gift-box-img img{
+         margin-top: 40px;   
+    }
+}
+
+
 .custom-toggler .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(11, 190, 233, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
