--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -394,7 +394,23 @@ figure.effect-sadie3:hover p {
     border-radius:10px;
 }
 
+.price-extras {
+    font-size: 20px;
+    background-color:#0bbee9;
+    color:black;
+    padding-left:10px;
+    padding-right:10px;
+    padding-top:5px;
+    padding-bottom:5px;
+    border-radius:10px;
+}
 
+@media(max-width:600px){
+.price-extras-div{
+    text-align:left!important;
+    padding-left: 30px;
+}
+}
 
 @media(max-width: 992px){
     .menu-link{
